--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -6,7 +6,7 @@
   }
   
   body {
-    font-family: Arial, sans-serif;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     padding: 20px;
     background-color: #f0f0f0;
   }
